--- a/GlobalEvents/GlobalEvents/Views/Users/Delete.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Delete.cshtml
@@ -5,66 +5,70 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h4>¿Esta seguro que desea eliminar este usuario?</h4>
-<div class="form-group row">
-    <label class="col-sm-2 col-form-label">
-        @Html.DisplayNameFor(model => model.Id)
-    </label>
-    <div class="col-sm-10">
-        <p class="form-control-static">
-            @Html.DisplayFor(model => model.Id)
-        </p>
-    </div>
-
-    <label class="col-sm-2 col-form-label">
-        @Html.DisplayNameFor(model => model.Usuario)
-    </label>
-    <div class="col-sm-10">
-        <p class="form-control-static">
-            @Html.DisplayFor(model => model.Usuario)
-        </p>
-    </div>
-
-    @if (Model.Nombre != null)
-    {
-        <label class="col-sm-2 col-form-label">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </label>
+<div class="card">
+    <div class="card-content">
+        <div class="card-title">¿Esta seguro que desea eliminar este usuario?</div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">
+                @Html.DisplayNameFor(model => model.Id)
+            </label>
             <div class="col-sm-10">
                 <p class="form-control-static">
-                    @Html.DisplayFor(model => model.Nombre)
+                    @Html.DisplayFor(model => model.Id)
                 </p>
             </div>
-    }
 
-    @if (Model.Apellido != null)
-    {
-        <label class="col-sm-2 col-form-label">
-            @Html.DisplayNameFor(model => model.Apellido)
-        </label>
+            <label class="col-sm-2 col-form-label">
+                @Html.DisplayNameFor(model => model.Usuario)
+            </label>
             <div class="col-sm-10">
                 <p class="form-control-static">
-                    @Html.DisplayFor(model => model.Apellido)
+                    @Html.DisplayFor(model => model.Usuario)
                 </p>
             </div>
-    }
 
-    <label class="col-sm-2 col-form-label">
-        @Html.DisplayNameFor(model => model.Email)
-    </label>
-    <div class="col-sm-10">
-        <p class="form-control-static">
-            @Html.DisplayFor(model => model.Email)
-        </p>
-    </div>
+            @if (Model.Nombre != null)
+            {
+                <label class="col-sm-2 col-form-label">
+                    @Html.DisplayNameFor(model => model.Nombre)
+                </label>
+                <div class="col-sm-10">
+                    <p class="form-control-static">
+                        @Html.DisplayFor(model => model.Nombre)
+                    </p>
+                </div>
+            }
 
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
+            @if (Model.Apellido != null)
+            {
+                <label class="col-sm-2 col-form-label">
+                    @Html.DisplayNameFor(model => model.Apellido)
+                </label>
+                <div class="col-sm-10">
+                    <p class="form-control-static">
+                        @Html.DisplayFor(model => model.Apellido)
+                    </p>
+                </div>
+            }
 
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Eliminar" class="btn btn-primary" />
+            <label class="col-sm-2 col-form-label">
+                @Html.DisplayNameFor(model => model.Email)
+            </label>
+            <div class="col-sm-10">
+                <p class="form-control-static">
+                    @Html.DisplayFor(model => model.Email)
+                </p>
+            </div>
+
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                <br />
+                <div class="col-s6">
+                    <input type="submit" value="Eliminar" class="btn btn-primary" />
+                </div>
+                <div class="col-s6">@Html.ActionLink("Volver a usuarios", "Index")</div>
+            }
+        </div>        
         </div>
-    }
 </div>
-<div>@Html.ActionLink("Volver a usuarios", "Index")</div>
