--- a/GlobalEvents/GlobalEvents/Views/Users/Details.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Details.cshtml
@@ -8,60 +8,64 @@
 <br />
 <br />
 
-<div class="form-group row">
-    <label class="col-sm-2 col-form-label">
-        @Html.DisplayNameFor(model => model.Id)
-    </label>
-    <div class="col-sm-10">
-        <p class="form-control-static">
-        @Html.DisplayFor(model => model.Id)
-        </p>
-    </div>
+<div class="card">
+    <div class="card-content">
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">
+                @Html.DisplayNameFor(model => model.Id)
+            </label>
+            <div class="col-sm-10">
+                <p class="form-control-static">
+                    @Html.DisplayFor(model => model.Id)
+                </p>
+            </div>
 
-    <label class="col-sm-2 col-form-label">
-        @Html.DisplayNameFor(model => model.Usuario)
-    </label>
-    <div class="col-sm-10">
-        <p class="form-control-static">
-            @Html.DisplayFor(model => model.Usuario)
-        </p>
-    </div>
+            <label class="col-sm-2 col-form-label">
+                @Html.DisplayNameFor(model => model.Usuario)
+            </label>
+            <div class="col-sm-10">
+                <p class="form-control-static">
+                    @Html.DisplayFor(model => model.Usuario)
+                </p>
+            </div>
 
-    @if (Model.Name != null)
-    {
-    <label class="col-sm-2 col-form-label">
-        @Html.DisplayNameFor(model => model.Name)
-    </label>
-    <div class="col-sm-10">
-        <p class="form-control-static">
-            @Html.DisplayFor(model => model.Name)
-        </p>
-    </div>
-    }
+            @if (Model.Name != null)
+            {
+                <label class="col-sm-2 col-form-label">
+                    @Html.DisplayNameFor(model => model.Name)
+                </label>
+                <div class="col-sm-10">
+                    <p class="form-control-static">
+                        @Html.DisplayFor(model => model.Name)
+                    </p>
+                </div>
+            }
 
-    @if (Model.Apellido != null)
-    {
-    <label class="col-sm-2 col-form-label">
-        @Html.DisplayNameFor(model => model.Apellido)
-    </label>
-    <div class="col-sm-10">
-        <p class="form-control-static">
-            @Html.DisplayFor(model => model.Apellido)
-        </p>
-    </div>
-    }
+            @if (Model.Apellido != null)
+            {
+                <label class="col-sm-2 col-form-label">
+                    @Html.DisplayNameFor(model => model.Apellido)
+                </label>
+                <div class="col-sm-10">
+                    <p class="form-control-static">
+                        @Html.DisplayFor(model => model.Apellido)
+                    </p>
+                </div>
+            }
 
-    <label class="col-sm-2 col-form-label">
-        @Html.DisplayNameFor(model => model.Email)
-    </label>
-    <div class="col-sm-10">
-        <p class="form-control-static">
-            @Html.DisplayFor(model => model.Email)
-        </p>
-    </div>
-</div>
-<div class="fixed-action-btn">
-    <a class="btn-floating btn-large green" href="~/Users/Edit/@Model.Id">
-        <i class="large material-icons">mode_edit</i>
-    </a>
+            <label class="col-sm-2 col-form-label">
+                @Html.DisplayNameFor(model => model.Email)
+            </label>
+            <div class="col-sm-10">
+                <p class="form-control-static">
+                    @Html.DisplayFor(model => model.Email)
+                </p>
+            </div>
+        </div>
+        <div class="fixed-action-btn">
+            <a class="btn-floating btn-large green" href="~/Users/Edit/@Model.Id">
+                <i class="large material-icons">mode_edit</i>
+            </a>
+        </div>
+        </div>
 </div>
