--- a/GlobalEvents/GlobalEvents/Views/Events/Delete.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Delete.cshtml
@@ -5,85 +5,88 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<br />
+<br />
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Events</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.NombreEvento)
-        </dt>
+<div class="card">
+    <div class="card-content">
+        <div class="card-title">¿Estas seguro que desea eliminar?</div>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.NombreEvento)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.NombreEvento)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.NombreEvento)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.lat)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.lat)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.lat)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.lat)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.lng)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.lng)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.lng)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.lng)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Descripcion)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Descripcion)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Descripcion)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Descripcion)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FechaInicio)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.FechaInicio)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FechaInicio)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.FechaInicio)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FechaFin)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.FechaFin)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FechaFin)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.FechaFin)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.IdUser)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.IdUser)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.IdUser)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.IdUser)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Estado)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Estado)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Estado)
+            </dd>
 
-    </dl>
+        </dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
-</div>
+            <div class="form-actions no-color">
+                <input type="submit" value="Eliminar" class="btn btn-default" /> |
+                @Html.ActionLink("Volver", "Index")
+            </div>
+        }
+    </div>
+    </div>
