--- a/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
@@ -129,6 +129,7 @@
                  Html.IsSelected(controllers: "Events", actions: "Listado") ||
                  Html.IsSelected(controllers: "Comments", actions: "Listado") ||
                  Html.IsSelected(controllers: "Comments", actions: "Details") ||
+                 Html.IsSelected(controllers: "Events", actions: "Delete") ||
                  Html.IsSelected(controllers: "Manage", actions: "Reportes"))
             {
                 <div class="nav-content">
@@ -153,7 +154,7 @@
                             <i class="material-icons">add</i>
                         </a>
                     }
-                    else
+                    @if (Html.IsSelected(controllers: "Events"))
                     {
                         <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal pulse" href="~/Events/Create">
                             <i class="material-icons">add</i>
