No permite a usuarios no administradores acceder al panel de administracion

--- a/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
@@ -47,7 +47,10 @@
                     <li>
                         @if (WebSecurity.IsAuthenticated)
                         {
-                            @Html.ActionLink("Administración", "Index", "Users", new { area = "" }, null)
+                            if (Roles.GetRolesForUser(WebSecurity.CurrentUserName)[0].ToString() == "Admin")
+                            {
+                                @Html.ActionLink("Administración", "Index", "Users", new { area = "" }, null)
+                            }
                         }
                     </li>
                     <li>
